@@ -71,6 +71,8 @@ Reserved Notation "{ x : A  |  P  &  Q }" (at level 0, x at level 99).
 Reserved Notation "{ x : A  &  P }" (at level 0, x at level 99).
 Reserved Notation "{ x : A  &  P  &  Q }" (at level 0, x at level 99).
 
+Reserved Notation "[ x ]" (at level 0).
+
 Delimit Scope type_scope with type.
 Delimit Scope core_scope with core.
 
